--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,16 +1,16 @@
 <ion-tabs>
 
   <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="tab1">
+    <ion-tab-button tab="home">
       <ion-icon name="home"></ion-icon>    
     </ion-tab-button>
 
-    <ion-tab-button tab="tab2">
+    <ion-tab-button tab="search">
       <ion-icon name="search"></ion-icon>      
     </ion-tab-button>
 
-    <ion-tab-button tab="tab3">
-      <ion-icon name="heart"></ion-icon>      
+    <ion-tab-button tab="favorites">
+      <ion-icon name="star"></ion-icon>      
     </ion-tab-button>
 
     <ion-tab-button tab="account">
