--- a/src/app/custom-header/custom-header.component.html
+++ b/src/app/custom-header/custom-header.component.html
@@ -4,7 +4,7 @@
   </ion-title>
   <ion-buttons slot="end">
     <ion-button (click)="openCart()">
-      <ion-badge >3</ion-badge>
+      <ion-badge >{{global.cartItems}}</ion-badge>
       <ion-icon slot="icon-only" name="cart"></ion-icon>
     </ion-button>
   </ion-buttons>
