--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -3,6 +3,7 @@
 
 /** Ionic CSS Variables **/
 :root {
+  --ion-font-family: 'My Custom Font';
   /** primary **/
   --ion-color-primary: #3880ff;
   --ion-color-primary-rgb: 56, 128, 255;
@@ -224,5 +225,11 @@
     --ion-toolbar-background: #1f1f1f;
 
     --ion-tab-bar-background: #1f1f1f;
+  }
+  @font-face{
+    font-family: 'My Custom Font';
+    font-style: normal;
+    font-weight: normal;
+    src: url('../assets/fonts/Cabin-Medium.ttf');
   }
 }
