--- a/src/app/custom-header/custom-header.component.html
+++ b/src/app/custom-header/custom-header.component.html
@@ -1,5 +1,5 @@
 <ion-toolbar>
-  <ion-title>
+  <ion-title (click)="showHome()">
     <h5 class="ion-text-center">THE ELDER'S CLOSET</h5>
   </ion-title>
   <ion-buttons slot="end">
