--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -6,7 +6,7 @@
   <ion-grid>
     <ion-row>
       <ion-col>
-        <ion-card class="ion-text-center">
+        <ion-card class="ion-text-center" (click)="showSearch()">
           <ion-card-header>
             <ion-icon name="pricetags" style="zoom:4.0;" ></ion-icon>
           </ion-card-header>          
@@ -62,10 +62,10 @@
       <ion-col>
         <ion-card class="ion-text-center">
           <ion-card-header>          
-            <ion-icon name="trending-down" style="zoom:4.0;" ></ion-icon>
+            <ion-icon name="trending-up" style="zoom:4.0;" ></ion-icon>
           </ion-card-header>          
           <ion-card-content>
-            OFERTAS
+            TENDENCIAS
           </ion-card-content>
         </ion-card>
       </ion-col>
