--- a/src/app/correct-payment/correct-payment.page.scss
+++ b/src/app/correct-payment/correct-payment.page.scss
@@ -1,9 +1,12 @@
+ion-label{
+    font-size: 30px;
+}
 ion-grid{
     height: 100%;
 }
-.center{
+ion-row{
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 50%;
+    height: 100%;
 }
