--- a/src/app/favorites/favorites.page.html
+++ b/src/app/favorites/favorites.page.html
@@ -3,5 +3,22 @@
 </ion-header>
 
 <ion-content>
-
+  <ion-toolbar class="ion-text-center">
+    <ion-title size="medium">FAVORITOS ⭐  </ion-title>
+  </ion-toolbar>
+  <ion-grid>
+    <ion-row >
+      <ion-col *ngFor="let item of products; let i = index" [routerLink]="['/tabs', 'product', item.product.id]">
+        <ion-card>
+          <img src="{{'http://127.0.0.1:8000/api/products/'+ item.product.id + '/image' }}"/>          
+          <ion-card-content>
+            <ion-card-title>{{ item.product.title }}</ion-card-title>
+            <ion-card-subtitle>{{ item.product.price }}</ion-card-subtitle> 
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+      <ion-col>      
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
