--- a/src/app/orders/orders.page.scss
+++ b/src/app/orders/orders.page.scss
@@ -7,3 +7,11 @@
         justify-content: center;
         height: 100%;
     }
+    .title{
+        border-bottom: 1px solid white;
+        border-top: 1px solid white;
+        font-size: 18px;
+     }
+     .masterRow{
+         border-bottom: 1px solid white;
+     }
