--- a/src/app/payment/payment.page.scss
+++ b/src/app/payment/payment.page.scss
@@ -1,4 +1,11 @@
 ion-label{
     font-size: medium; 
-    color: white;   
+    color: white;  
+    text-decoration: underline;
+}
+.iconLock{
+    display: inline-block;
+    font-size: 30px;
+    color: white;
+    vertical-align: middle;
 }
