--- a/src/app/shipping/shipping.page.scss
+++ b/src/app/shipping/shipping.page.scss
@@ -2,3 +2,10 @@ ion-label{
     font-size: 18px;
     color: white;
 }
+ion-text{
+    font-size: 16px;
+    color: white;
+}
+ion-card-title{
+    color: white;
+}
