--- a/src/app/add-address/add-address.page.html
+++ b/src/app/add-address/add-address.page.html
@@ -47,7 +47,7 @@
         </div>
 
         <ion-label for="country">        
-          Pais:
+          País:
         </ion-label>
         <ion-item id="rounded">
           <ion-input type="text" formControlName="country" id="country"></ion-input>
@@ -56,7 +56,7 @@
         </div>
 
         <ion-label for="phone_number">        
-          Telefono:
+          Teléfono:
         </ion-label>
         <ion-item id="rounded">
           <ion-input type="tel" pattern="[0-9]*" formControlName="phone_number" id="phone_number"></ion-input>
