--- a/src/app/category-list/category-list.page.html
+++ b/src/app/category-list/category-list.page.html
@@ -3,19 +3,17 @@
 </ion-header>
 
 <ion-content>
-  <ion-grid>
+  <ion-grid >
     <ion-row >
-      <ion-col *ngFor="let item of results; let i = index" [routerLink]="['/tabs', 'product', item.id]">
+      <ion-col *ngFor="let item of results; let i = index" [routerLink]="['/tabs', 'product', item.id]" size="6">
         <ion-card>
           <img src="{{'http://127.0.0.1:8000/api/products/'+ item.id + '/image' }}"/>          
           <ion-card-content>
             <ion-card-title>{{ item.title }}</ion-card-title>
-            <ion-card-subtitle>{{ item.price }}</ion-card-subtitle> 
+            <ion-card-subtitle style="font-size: large;">{{ item.price }} €</ion-card-subtitle> 
           </ion-card-content>
         </ion-card>
-      </ion-col>
-      <ion-col>      
-      </ion-col>
+      </ion-col>      
     </ion-row>
   </ion-grid>    
 </ion-content>
