--- a/src/app/favorites/favorites.page.html
+++ b/src/app/favorites/favorites.page.html
@@ -4,21 +4,19 @@
 
 <ion-content>
   <ion-toolbar class="ion-text-center">
-    <ion-title size="medium">FAVORITOS ⭐  </ion-title>
+    <ion-title size="medium">FAVORITOS ⭐</ion-title>
   </ion-toolbar>
   <ion-grid>
     <ion-row >
-      <ion-col *ngFor="let item of products; let i = index" [routerLink]="['/tabs', 'product', item.product.id]">
+      <ion-col *ngFor="let item of products; let i = index" [routerLink]="['/tabs', 'product', item.product.id]" size="6">
         <ion-card>
           <img src="{{'http://127.0.0.1:8000/api/products/'+ item.product.id + '/image' }}"/>          
           <ion-card-content>
             <ion-card-title>{{ item.product.title }}</ion-card-title>
-            <ion-card-subtitle>{{ item.product.price }}</ion-card-subtitle> 
+            <ion-card-subtitle style="font-size: large;">{{ item.product.price }} €</ion-card-subtitle> 
           </ion-card-content>
         </ion-card>
-      </ion-col>
-      <ion-col>      
-      </ion-col>
+      </ion-col>      
     </ion-row>
   </ion-grid>
 </ion-content>
