--- a/src/app/order-items/order-items.page.html
+++ b/src/app/order-items/order-items.page.html
@@ -8,15 +8,15 @@
       <!--prueba-->
       <ion-grid>
         <ion-row>
-          <ion-col>
+          <ion-col size="5">
             <img  src="{{'http://127.0.0.1:8000/api/productColors/'+ item.color_size.product_color.id + '/image' }}" alt="" item-left class="product-thumb" />
           </ion-col>
-          <ion-col >
+          <ion-col size="7">
             <ion-row class="title ion-align-items-start">
               <ion-col >
                 <ion-item>
-                  <ion-label class= "bigger">
-                    {{item.color_size.product_color.product.title}}  
+                  <ion-label class= "ion-text-wrap bigger">
+                    {{item.color_size.product_color.product.title}}  ({{ item.quantity}})
                   </ion-label> 
                 </ion-item>   
                 <ion-item>                                             
