--- a/src/app/product/product.page.html
+++ b/src/app/product/product.page.html
@@ -12,9 +12,12 @@
           
         </ion-col>
         <ion-col> 
-          <ion-button class= "bottom" expand="full" color="warning">
+          <ion-button *ngIf="!isFavorite" class= "bottom" expand="full" color="warning" (click)="addToFavorites(product?.id)">
             AÑADIR A FAVORITOS ⭐
-          </ion-button>                                                 
+          </ion-button> 
+          <ion-button *ngIf="isFavorite" class= "bottom" expand="full" color="primary" (click)="deleteFromFavorites(product?.id)">
+            ELIMINAR DE FAVORITOS ⭐
+          </ion-button>                                                
         </ion-col>        
       </ion-row>
       <ion-row>
@@ -34,7 +37,7 @@
         </ion-col>              
       </ion-row> 
       <ion-row>
-        <ion-col size="8"> 
+        <ion-col > 
           <ion-list-header class="description">{{product?.description}}</ion-list-header>                                                 
         </ion-col>
       </ion-row>            
@@ -77,7 +80,7 @@
       </ion-row>
       <!-- Comprar/Añadir al carrito -->
       <ion-row >
-        <ion-col (click)="goToCart(selectedSize)">
+        <ion-col (click)="goToCart()">
           <ion-button class= "bottom" expand="full" >
             COMPRAR
           </ion-button>
