Solucionados errores de funcionalidad

--- a/src/app/auth/login/login.page.html
+++ b/src/app/auth/login/login.page.html
@@ -20,7 +20,7 @@
           <div>
             <ion-item>
               <ion-icon name="mail" item-start class="ion-padding-end"></ion-icon>
-              <ion-input name="email" type="email" placeholder="Ejemplo@email.com" ngModel required></ion-input>
+              <ion-input name="email" type="email" placeholder="ejemplo@email.com" ngModel required></ion-input>
             </ion-item>
             <ion-item>
               <ion-icon name="lock-closed" item-start class="ion-padding-end"></ion-icon>
