--- a/src/app/account/account.page.html
+++ b/src/app/account/account.page.html
@@ -38,7 +38,7 @@
         </ion-card>
       </ion-col>
       <ion-col>
-        <ion-card class="ion-text-center" [routerLink]="['/']">
+        <ion-card class="ion-text-center" (click)="logout()">
           <ion-card-header>          
             <ion-icon name="log-out-outline" style="zoom:4.0;" ></ion-icon>
           </ion-card-header>          
